- corrected the sender placement in chat files as left aligned (was center aligned)

--- a/css/eclipsephase.css
+++ b/css/eclipsephase.css
@@ -575,6 +575,10 @@ span.neutral {
   opacity: 1;
 }
 
+.message-sender {
+  text-align: left;
+}
+
 .ep-menu {
   background-color: rgba(64, 152, 214, 0.4)!important;
 }
